test/files/neg/t6476.scala
trait TypeErrors {
  val sa = s"x\"y
}
