test/files/neg/t6476.check
t6476.scala:2: error: value y is not a member of String
  val sa = s"x\"y
                ^
one error found
